--- a/selector/id/sample.html
+++ b/selector/id/sample.html
@@ -7,9 +7,7 @@
   </head>
 
   <body>
-    <p id="word-red">この文章は赤にしたい</p>
-    <p>この文章は黒のまま</p>
-    <p id="word-red">この文章は赤にしたい</p>
+    <p id="word-red">この文章だけ赤にしたい</p>
     <p>この文章は黒のまま</p>
   </body>
 </html>
